test/modules/diten/usemodule/test_nested_use4.good
test_nested_use4.chpl:12: In function 'main':
test_nested_use4.chpl:13: error: Cannot find module or enum 'notoutermost'
